ghc-4335c07/testsuite/tests/rename/should_fail/rnfail035.hs
-- !!! can't name a constructor in an export list
module ShouldFail ( C ) where
data T = C
